--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Ahorcado</title>
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/6168/6168592.png" />
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
@@ -200,9 +205,4 @@
       ]
     };
 
-    const hangmanParts = ['', '  ___\n  |  |\n  |\n  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  |  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\\\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\\\n  | /\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\\\n  | / \\\n__|__'];
-
-    let currentWord = '';
-    let currentHint = '';
-    let guessedWord = [];
-    let wrongGuesses
+    const hangmanParts = ['', '  ___\n  |  |\n  |\n  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  |  |\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\n  |\n__|__', '  ___\n  |  |\n  |  😵\n  | /|\\\n  |\n__|__', '  ___\n  |  |\n  |  😵\n 
