--- a/index.html
+++ b/index.html
@@ -5,7 +5,212 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Ahorcado</title>
   <style>
-    /* ... (los estilos son los mismos que ya tienes, no los repito aquí para ahorrar espacio) ... */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
+    }
+
+    body {
+      font-family: Times New Roman, serif;
+      background: white;
+      color: black;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 10px;
+      overflow-x: hidden;
+    }
+
+    .container {
+      background: #f9f9f9;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 15px;
+    }
+
+    .hangman-display {
+      font-family: 'Courier New', monospace;
+      font-size: 1rem;
+      background: #eee;
+      padding: 15px;
+      border-radius: 10px;
+      margin: 15px 0;
+      white-space: pre-line;
+      min-height: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .word-display {
+      font-size: 1.8rem;
+      font-weight: bold;
+      letter-spacing: 0.2em;
+      margin: 15px 0;
+      padding: 15px 10px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      word-break: break-word;
+    }
+
+    .game-info {
+      display: flex;
+      justify-content: space-between;
+      margin: 15px 0;
+      font-size: 1rem;
+      font-weight: bold;
+    }
+
+    .alphabet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 8px;
+      margin: 20px 0;
+      padding: 0 5px;
+    }
+
+    .letter-btn {
+      background: #fff;
+      border: 1px solid #aaa;
+      color: black;
+      padding: 12px 8px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: all 0.2s ease;
+      min-height: 44px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      touch-action: manipulation;
+    }
+
+    .letter-btn:active {
+      transform: scale(0.95);
+      background: #ddd;
+    }
+
+    .letter-btn:disabled {
+      background: #fdd;
+      border-color: #f99;
+      cursor: not-allowed;
+      opacity: 0.7;
+    }
+
+    .letter-btn.correct {
+      background: #dfd;
+      border-color: #9f9;
+    }
+
+    .new-game-btn {
+      background: #667eea;
+      border: none;
+      color: white;
+      padding: 15px 25px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      margin-top: 15px;
+      transition: all 0.2s ease;
+      min-height: 44px;
+      touch-action: manipulation;
+    }
+
+    .new-game-btn:active {
+      transform: translateY(1px);
+    }
+
+    .message {
+      font-size: 1rem;
+      font-weight: bold;
+      margin: 15px 0;
+      padding: 12px;
+      border-radius: 10px;
+      min-height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .win {
+      background: #dfd;
+      color: green;
+      border: 1px solid #9f9;
+    }
+
+    .lose {
+      background: #fdd;
+      color: red;
+      border: 1px solid #f99;
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
+
+    .shake {
+      animation: shake 0.5s ease-in-out;
+    }
+
+    @media (min-width: 768px) {
+      body {
+        justify-content: center;
+        padding: 40px;
+      }
+
+      .container {
+        max-width: 500px;
+        padding: 30px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        border-radius: 15px;
+        margin: auto;
+      }
+
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+      }
+
+      .word-display {
+        font-size: 2.2rem;
+        letter-spacing: 0.25em;
+      }
+
+      .letter-btn {
+        font-size: 1.2rem;
+        padding: 14px 10px;
+      }
+
+      .new-game-btn {
+        font-size: 1.2rem;
+        padding: 18px 30px;
+      }
+
+      .message {
+        font-size: 1.1rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -49,8 +254,8 @@
         btn.className = 'letter-btn';
         btn.textContent = letter;
         btn.setAttribute('data-letter', letter);
-        btn.addEventListener('click', (e) => {
-          e.preventDefault();
+        btn.addEventListener('click', (e) =>
+                    e.preventDefault();
           guessLetter(letter, btn);
         });
         alphabetDiv.appendChild(btn);
@@ -153,4 +358,3 @@
   </script>
 </body>
 </html>
-
