--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Ahorcado</title>
+
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
+    }
+
     body {
       font-family: Times New Roman, serif;
       background: white;
       color: black;
-      margin: 0;
-      padding: 10px;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-start;
+      padding: 10px;
+      overflow-x: hidden;
     }
 
     .container {
+      background: #f9f9f9;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
       max-width: 400px;
       width: 100%;
-      text-align: center;
+      margin: 10px 0;
     }
 
     h1 {
@@ -29,12 +47,16 @@
 
     .hangman-display {
       font-family: 'Courier New', monospace;
+      font-size: 1rem;
       background: #eee;
       padding: 15px;
       border-radius: 10px;
       margin: 15px 0;
       white-space: pre-line;
       min-height: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .word-display {
@@ -46,6 +68,7 @@
       background: #fff;
       border: 1px solid #ccc;
       border-radius: 10px;
+      word-break: break-word;
     }
 
     .game-info {
@@ -61,6 +84,7 @@
       grid-template-columns: repeat(6, 1fr);
       gap: 8px;
       margin: 20px 0;
+      padding: 0 5px;
     }
 
     .letter-btn {
@@ -72,6 +96,17 @@
       cursor: pointer;
       font-size: 1rem;
       font-weight: bold;
+      transition: all 0.2s ease;
+      min-height: 44px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      touch-action: manipulation;
+    }
+
+    .letter-btn:active {
+      transform: scale(0.95);
+      background: #ddd;
     }
 
     .letter-btn:disabled {
@@ -96,6 +131,13 @@
       font-size: 1rem;
       font-weight: bold;
       margin-top: 15px;
+      transition: all 0.2s ease;
+      min-height: 44px;
+      touch-action: manipulation;
+    }
+
+    .new-game-btn:active {
+      transform: translateY(1px);
     }
 
     .message {
@@ -104,6 +146,10 @@
       margin: 15px 0;
       padding: 12px;
       border-radius: 10px;
+      min-height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .win {
@@ -116,6 +162,16 @@
       background: #fdd;
       color: red;
       border: 1px solid #f99;
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
+
+    .shake {
+      animation: shake 0.5s ease-in-out;
     }
   </style>
 </head>
@@ -139,13 +195,13 @@
     let score = parseInt(localStorage.getItem('hangmanScore') || '0');
     const hangmanParts = ['', '  ___\n  |  |\n  |\n  |\n  |\n__|__','  ___\n  |  |\n  |  😵\n  |\n  |\n__|__','  ___\n  |  |\n  |  😵\n  |  |\n  |\n__|__','  ___\n  |  |\n  |  😵\n  | /|\n  |\n__|__','  ___\n  |  |\n  |  😵\n  | /|\\\n  |\n__|__','  ___\n  |  |\n  |  😵\n  | /|\\\n  | /\n__|__','  ___\n  |  |\n  |  😵\n  | /|\\\n  | / \\\n__|__'];
 
-    document.addEventListener('DOMContentLoaded', initGame);
-
     function vibrate(pattern = 200) {
       if (navigator.vibrate) navigator.vibrate(pattern);
     }
 
     function initGame() {
+      document.addEventListener('gesturestart', e => e.preventDefault());
+      document.addEventListener('gesturechange', e => e.preventDefault());
       createAlphabet();
       newGame();
       updateScore();
@@ -160,10 +216,9 @@
         btn.className = 'letter-btn';
         btn.textContent = letter;
         btn.setAttribute('data-letter', letter);
-        btn.addEventListener('click', (e) => {
-          e.preventDefault();
-          guessLetter(letter, btn);
-        });
+        btn.addEventListener('touchstart', e => { e.preventDefault(); btn.style.transform = 'scale(0.95)'; });
+        btn.addEventListener('touchend', e => { e.preventDefault(); btn.style.transform = ''; setTimeout(() => guessLetter(letter, btn), 50); });
+        btn.addEventListener('click', e => { e.preventDefault(); guessLetter(letter, btn); });
         alphabetDiv.appendChild(btn);
       }
     }
@@ -183,9 +238,7 @@
     function guessLetter(letter, btn) {
       if (gameOver || btn.disabled) return;
       btn.disabled = true;
-      vibrate(50);
-
-      if (currentWord.includes(letter)) {
+            if (currentWord.includes(letter)) {
         btn.classList.add('correct');
         for (let i = 0; i < currentWord.length; i++) {
           if (currentWord[i] === letter) {
@@ -203,6 +256,9 @@
       } else {
         wrongGuesses++;
         updateHangman();
+        const container = document.querySelector('.container');
+        container.classList.add('shake');
+        setTimeout(() => container.classList.remove('shake'), 500);
         if (wrongGuesses >= 6) {
           gameOver = true;
           showMessage(`Game Over 😔\nLa palabra era: ${currentWord}`, 'lose');
@@ -240,6 +296,7 @@
       buttons.forEach(btn => {
         btn.disabled = false;
         btn.classList.remove('correct');
+        btn.style.transform = '';
       });
     }
 
@@ -247,7 +304,7 @@
       document.getElementById('score').textContent = score;
     }
 
-       document.addEventListener('keydown', (e) => {
+    document.addEventListener('keydown', (e) => {
       if (gameOver) return;
       const letter = e.key.toUpperCase();
       if (letter >= 'A' && letter <= 'Z') {
@@ -257,6 +314,8 @@
         }
       }
     });
+
+    document.addEventListener('DOMContentLoaded', initGame);
   </script>
 </body>
 </html>
