--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Ahorcado</title>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#667eea">
+
 
   <style>
     * {
@@ -317,5 +320,13 @@
 
     document.addEventListener('DOMContentLoaded', initGame);
   </script>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(() => console.log("✅ Service Worker registrado"))
+      .catch(err => console.error("❌ Error al registrar SW", err));
+  }
+</script>
+
 </body>
 </html>
